<resources>
    <string name="app_name" translatable="false">LeadX</string>
    <string name="default_notification_channel_id" translatable="false">LeadX_Notification</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="some_thing_went_wrong_error_msg">Something went wrong, Please try again</string>
    <string name="please_click_to_retry">Tap to retry</string>
    <string name="welcome_to_lead_x">Welcome to LeadX</string>
    <string name="sign_in_with_microsoft">Sign in with Microsoft</string>
    <string name="create_new_lead">Create New Lead</string>
    <string name="profile">Profile</string>
    <string name="terms">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Log Out</string>
    <string name="change_language">Change Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="lead_name">Lead Name</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="region">Region</string>
    <string name="business_opportunity_type_optional">Business Opportunity Type (Optional)</string>
    <string name="customer_status">Customer Status</string>
    <string name="when_does_customer_need_system">System is needed on?</string>
    <string name="additional_comment">Additional Comment (Optional)</string>
    <string name="contact_person">Contact Person</string>
    <string name="what_is_the_lead_composed_of">What is the lead composed of?</string>
    <string name="devices_needs">Devices/Needs</string>
    <string name="add_system">Add System</string>
    <string name="submit">Submit</string>
    <string name="selected_before">This System is selected before</string>
    <string name="msg_empty_field">Empty field</string>
    <string name="lead_status">Lead Status</string>
    <string name="id">ID</string>
    <string name="no_leads_yet">No Leads Yet !</string>
    <string name="an_error_occurred">Unexpected error</string>
    <string name="reload">Reload</string>
    <string name="lead_id">Lead ID</string>
    <string name="new_status">New</string>
    <string name="verified">verified</string>
    <string name="confirmed">Confirmed</string>
    <string name="approved">Approved</string>
    <string name="promoted">Promoted</string>
    <string name="booked">Booked</string>
    <string name="rejected">Rejected</string>
    <string name="info">Info</string>
    <string name="details">Details</string>
    <string name="devices">Devices</string>
    <string name="lead_date">Lead Date</string>
    <string name="note">Note</string>
    <string name="business_opportunity_type">Business Opportunity Type</string>
    <string name="device_need">Device/Need</string>
    <string name="select_app_language">Select app language</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure do you want to\nLogout?</string>
    <string name="empty_notifications">Empty Notification !</string>
    <string name="no_notification_msg">It seems, No notification in your\ninbox. start Create leads now.</string>
    <string name="notifications">Notifications</string>
    <string name="rewarded">Rewarded</string>
    <string name="you_have_been_rewarded">You have been Rewarded by %s SAR for this lead your reward will be added to your next payroll</string>
    <string name="city">City</string>
    <string name="sector">Sector</string>
    <string name="send_email">Send Email</string>
    <string name="send_your_question_or_problem">Send your question or problem</string>
    <string name="customer_service">Customer Service</string>
    <string name="reason">Reason</string>
    <string name="on_boarding_1">You Can Create New Lead</string>
    <string name="on_boarding_2">Fill the fields to create the New Lead and Press submit</string>
    <string name="on_boarding_3">Find Your Leads in Home Screen with updated status and info.</string>
    <string name="on_boarding_4">View Your Profile page, and enjoy its Features</string>
    <string name="on_boarding_5">Track your lead status and get rewarded on promoted leads</string>
    <string name="get_started">Get Started</string>
    <string name="splash_welcome" translatable="false">Welcome to Saudi Arabia\nlead generation program\n“LeadX”</string>
</resources>