<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/l_header"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    card_view:cardCornerRadius="@dimen/_8sdp"
    card_view:cardElevation="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_business_opportunity"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/business_opportunity_type"
            card_view:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_business_opportunity"
                style="@style/TextInputEditTextStyleDisabled" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_customer_status"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/customer_status"
            card_view:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_customer_status"
                style="@style/TextInputEditTextStyleDisabled" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/when_does_customer_need_system"
            card_view:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_date"
                style="@style/TextInputEditTextStyleDisabled" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_additional_comment"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/note"
            card_view:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_additional_comment"
                style="@style/TextInputEditTextStyleDisabled" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>