<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_container_language"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/_15sdp"
    tools:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_rectangle"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/select_app_language"
            android:textColor="@color/dark_jungle_green"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/fl_arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_arabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_arabic"
                android:drawablePadding="@dimen/_10sdp"
                android:gravity="center_vertical|start"
                android:text="@string/arabic"
                android:textAlignment="viewStart"
                android:textColor="@color/black60"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_check_arabic"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_unchecked" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fl_arabic"
            android:layout_marginTop="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_english"
                android:drawablePadding="@dimen/_10sdp"
                android:gravity="center_vertical|start"
                android:text="@string/english"
                android:textAlignment="viewStart"
                android:textColor="@color/black60"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_check_english"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_unchecked" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fl_english"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_with_stroke_border_gray"
                android:gravity="center"
                android:paddingVertical="@dimen/_13sdp"
                android:text="@string/cancel"
                android:textColor="@color/black90"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_rounded_corners_primary_color"
                android:gravity="center"
                android:paddingVertical="@dimen/_13sdp"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>