<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_container_language"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/_15sdp"
    tools:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_white_rectangle"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/ic_logout_dialog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logout"
            android:gravity="center"
            android:paddingVertical="@dimen/_13sdp"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/black90"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_logout"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_with_stroke_border_gray"
                android:gravity="center"
                android:paddingVertical="@dimen/_13sdp"
                android:text="@string/cancel"
                android:textColor="@color/black90"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_rounded_corners_primary_color"
                android:gravity="center"
                android:paddingVertical="@dimen/_13sdp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>